@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-05-18T01:19:06Z",
-  "count" : 4,
+  "timestamp" : "2022-05-31T16:28:35Z",
+  "count" : 3,
   "count_minmax" : [ 1, 4 ],
-  "count_decinc" : [ -0, +4 ],
+  "count_decinc" : [ -1, +4 ],
   "uniques" : 2,
   "uniques_minmax" : [ 1, 2 ],
   "uniques_decinc" : [ -0, +2 ]
