@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-05-31T08:26:44Z",
+  "timestamp" : "2022-05-31T16:28:35Z",
   "count_outdated" : 258,
   "uniques_outdated" : 151,
-  "count" : 274,
+  "count" : 273,
   "uniques" : 163,
   "clones" : [
     {
       "timestamp": "2022-05-17T00:00:00Z",
-      "count": 4,
+      "count": 3,
       "count_minmax": [ 1, 4 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
