@@ -1,10 +1,10 @@
 {
-  "count": 16,
+  "count": 15,
   "uniques": 8,
   "clones": [
     {
       "timestamp": "2022-05-17T00:00:00Z",
-      "count": 4,
+      "count": 3,
       "uniques": 2
     },
     {
